yoshimi 1.5.5 M

2017-12-14 Will
* Merged in BSD bugfixes from Tobias
* Changed source location of user manual.
  Separate lines in CMake no longer needed.
* MIDI-learn now has a threshold setting for switches.
* BugFix: More missing GUI messages found :(
* BugFix: CLI not updating scale name or description.

2017-12-13 Will
* BugFix: argp return still wrong for HURD :(
  Tried casting the return int to error_t instead.
* Applied better resolution of splash timeout.
* Bugfix: Importing scales was not updating GUI.

2017-12-12 Will
* Bugfix: argp return type was error_t should be int
* Bugfix: Missing #include <cmath> in WaveShapeSamples.h
* Bugfix: Missing #include <stdlib.h> in CmakeLists.txt
* Possible resolution of splash screen problem.

2017-12-11 Will
* Set max MIDI-learn lines to 200.
* Included current Advanced User Guide.
* Added wildcard for .xiy and .xiz files in FLTK.
* Updated docs.
* Set release version 1.5.5

2017-12-10 Will
* Bugfix: Some loads and saves were leaking MiscMsg.
* Banks Instrument ops now recognise new format.
  Tested for load, save, delete, swap, rename.
* Set version as 1.5.5 rc7.

2017-12-9 Will
* Further refinement to legato fade.
* Improved splash screen behaviour.
* Revised bank slot saving.
  Still some details to correct :(
* Enabled CLI direct access bank slot saving.
* Set version as 1.5.5 rc6.

2017-12-8 Will
* Resolved anomalies with new instrument type.
  GUI name colour reverts to black when cleared.
  GUI name colour updated on saves as well as loads.
  Bank structure identifies .xiy if either/both there.
  Bank entry instrument colours update.
  Loading instruments always looks for .xiy first.
* Set version as 1.5.5 rc5.

2017-12-7 Will
* Made GUI Settings windows consistent.
* .xiy doctype changed to Yoshimi.
* GUI now shows .xiy parts with mid-blue text.
* Set version as 1.5.5 rc4.

2017-12-6 Will
* Implemented extended (.xiy) Instrument saves.
* Set version as 1.5.5 rc3.

2017-12-5 Will